# graph_nn_cookbook

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
.github/workflows/: ci.yml
notebooks/: 01_example_notebook.ipynb  01_introduction_notebook.ipynb  02_nodes_classification.ipynb  02_nodes_classification.py  03_scaling_gnn.ipynb  README.md
notebooks/00_tutorials/: 001_introduction_notebook.ipynb
notebooks/01_ingestion/: 011_extract_data.py  012_extract_contigui.ipynb  012_extract_contigui.py  013_censimento.ipynb  config.py  extract_data.py  ingestion_utils.py
notebooks/02_modeling/: 021_build_graph.ipynb
notebooks/02_transformation/: 021_build_graph.ipynb  022_population.ipynb  trasformation_utils.py  utils.py
scripts/: setup_cli.py
src/: logging_utils.py  main.py  viz_utils.py
src/istat_distances/: 01_download_istat_distances.py  02_build_graph.ipynb
tests/: test_main.py
